# team-work-telegram-bot

./: .coverage  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  flake.nix  messages.pot  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: generic-issue.md  scenario-issue.md  scenario.yml  subtask-issue.md  task-issue.md  task.yml
.github/ISSUE_TEMPLATE/templates/: details.md  subtasks.md  template.yml
.github/workflows/: ci-team-12.yaml  ci-team-34.yaml  gen_changelog.yaml
app/bot/: chat.py  commands.py  constants.py  filters.py  handlers.py  language.py  meeting.py  messages.py  settings.py  state.py
app/web/: router.py  server.py  views.py
app/web/templates/: layout.html  set_timezone.html
bot/: bot.py  callbacks.py  commands.py  constants.py  custom_types.py  data_types.py  db.py  filters.py  fsm_states.py  handlers.py  i18n.py  i18n_middleware.py  intervals.py  keyboards.py  language.py  main.py  meeting.py  messages.py  middlewares.py  recurring_message.py  reminder.py  schedulerUtils.py  settings.py  state.py  tests.py  timezones.py  work_time.py
daily_scrum_telegram_bot/: bot.py  commands.py  constants.py  custom_types.py  db.py  filters.py  handlers.py  language.py  main.py  meeting.py  messages.py  middlewares.py  standup.py  state.py
docs/: glossary.md  requirements.md
docs/configuration/: git-workflow-process.md  glossary.md  policies-processes-procedures.md  roles-and-responsibilities.md  sprint.md
docs/configuration/diagrams/: processes.ts
locales/: messages.pot
scripts/: generate-issue-forms.sh  locales.sh  run_tests.sh  up.sh
scrum_standup_telegram_bot/: constants.py  filters.py  handlers.py  main.py  standup.py
standup_bot/: __init__.py  data.py  handlers.py  main.py  middlewares.py
tests/: conftest.py  mocked_bot.py  test_meeting.py  test_reminder.py  test_state.py  utils.py
tests/test_non_handlers/: test_get_message_link.py  test_intervals.py  test_make_job_id.py  test_update_reminders.py
(+14 files in other folders)
